Update JDA to 3.7.1 build 420, Lavaplayer to 1.3.7, and Lavalink to 3.0
This change will require the use of Java 10 or higher when using Lavalink.